# ai-native-dev

guides/: 08_observability_guide.md
labs/05-mcp/demo-01-basic-mcp-stdio/: main.py
labs/05-mcp/demo-02-mcp-calculator-tools/: main.py
labs/05-mcp/demo-03-mcp-weather-server/: main.py
labs/06-observability/: README.md
labs/06-observability/demo-01-langsmith-basics/: .env.example  .gitignore  README.md  main.py  pyproject.toml
labs/06-observability/demo-02-openai-tracing/: .env.example  README.md  main.py  pyproject.toml
labs/06-observability/demo-03-custom-metadata-and-feedback/: README.md  main.py  pyproject.toml
labs/06-observability/demo-04-langchain-auto-tracing/: README.md  main.py  pyproject.toml
labs/06-observability/demo-05-rag-pipeline-observability/: .gitignore  README.md  main.py  pyproject.toml
labs/06-observability/demo-06-langsmith-evaluation/: README.md  main.py  pyproject.toml
labs/07-multi-agent/demo-10-advanced-multi-agent-pipeline/: main.py
practices/practice-01-fastapi-document-analyzer/: main.py  pyproject.toml
practices/practice-02-openai-llm-app-to-rest-api/: README.md  main.py  pyproject.toml
practices/practice-03-chatapp/: README.md
practices/practice-03-chatapp/backend/: README.md
practices/practice-03-chatapp/docs/: ADVANCED_FEATURES.md  ANALYSIS.md  COMPLETION_REPORT.md  ENHANCEMENT_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  QUICKSTART.md  VISUAL_SUMMARY.md
practices/practice-03-chatapp/frontend/: .env.example  README.md  main.py  pyproject.toml
